--- a/src/Pages/Userprofilepage.css
+++ b/src/Pages/Userprofilepage.css
@@ -1,5 +1,6 @@
 .profile {
   color: white;
+  flex: 1;
 }
 .avatar1 {
   position: fixed;
@@ -9,25 +10,25 @@
 }
 .profile > h1 {
   position: absolute;
-  top: 110px;
-  left: 320px;
-  font-size: 34px;
+  top: 100px;
+  right: 900px;
+  font-size: 26px;
 }
-/*.profile > h2 {
+.profile > h2 {
   position: absolute;
   top: 160px;
-  left: 420px;
+  right: 420px;
   font-size: 18px;
   background-color: grey;
-  padding: 8px;
+  padding: 10px;
 }
 .profile_plans > h2 {
   position: absolute;
-  top: 210px;
-  left: 420px;
+  top: -30px;
+  right: 470px;
   font-size: 18px;
 }
-*/
+
 .profile_info {
   display: flex;
 }
@@ -35,7 +36,7 @@
   flex: 1;
   position: absolute;
   top: 160px;
-  left: 420px;
+  right: 520px;
 }
 .profile_details > h2 {
   background-color: grey;
@@ -51,4 +52,6 @@
   color: white;
   font-size: 18px;
   background-color: #e50914;
+  position: absolute;
+  top: 280px;
 }
